parser/SleepCommandsParser.py
# Generated from SleepCommands.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SleepCommandsParser ( Parser ):

    grammarFileName = "SleepCommands.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'i'", "'am'", "'is'", "'going'", "'to'", 
                     "'sleep'", "'woke'", "'up'", "'awake'", "'wake'", "'me'", 
                     "'at'", "'in'", "'warn'", "'if'", "'after'", "'what'", 
                     "'time'", "'did'", "'yesterday'", "'show'", "'check'", 
                     "'my'", "'consistency'", "'regularity'", "'how'", "'consistent'", 
                     "'regular'", "'help'", "'cancel'", "'stop'", "'alarm'", 
                     "'snooze'", "'for'", "'quality'", "'rate'", "'analyze'", 
                     "'give'", "'get'", "'advice'", "'tips'", "'suggestions'", 
                     "'better'", "'improve'", "'can'" ]

    symbolicNames = [ "<INVALID>", "I", "AM", "IS", "GOING", "TO", "SLEEP", 
                      "WOKE", "UP", "AWAKE", "WAKE", "ME", "AT", "IN", "WARN", 
                      "IF", "AFTER", "WHAT", "TIMEWORD", "DID", "YESTERDAY", 
                      "SHOW", "CHECK", "MY", "CONSISTENCY", "REGULARITY", 
                      "HOW", "CONSISTENT", "REGULAR", "HELP", "CANCEL", 
                      "STOP", "ALARM", "SNOOZE", "FOR", "QUALITY", "RATE", 
                      "ANALYZE", "GIVE", "GET", "ADVICE", "TIPS", "SUGGESTIONS", 
                      "BETTER", "IMPROVE", "CAN", "TIME", "NUMBER", "TIMEUNIT", 
                      "WS" ]

    RULE_command = 0
    RULE_sleepCmd = 1
    RULE_wakeCmd = 2
    RULE_setAlarmCmd = 3
    RULE_setAlarmRelativeCmd = 4
    RULE_cancelAlarmCmd = 5
    RULE_snoozeAlarmCmd = 6
    RULE_lateAlertCmd = 7
    RULE_queryCmd = 8
    RULE_consistencyCmd = 9
    RULE_qualityCmd = 10
    RULE_adviceCmd = 11
    RULE_helpCmd = 12

    ruleNames =  [ "command", "sleepCmd", "wakeCmd", "setAlarmCmd", "setAlarmRelativeCmd", 
                   "cancelAlarmCmd", "snoozeAlarmCmd", "lateAlertCmd", "queryCmd", 
                   "consistencyCmd", "qualityCmd", "adviceCmd", "helpCmd" ]

    EOF = Token.EOF
    I=1
    AM=2
    IS=3
    GOING=4
    TO=5
    SLEEP=6
    WOKE=7
    UP=8
    AWAKE=9
    WAKE=10
    ME=11
    AT=12
    IN=13
    WARN=14
    IF=15
    AFTER=16
    WHAT=17
    TIMEWORD=18
    DID=19
    YESTERDAY=20
    SHOW=21
    CHECK=22
    MY=23
    CONSISTENCY=24
    REGULARITY=25
    HOW=26
    CONSISTENT=27
    REGULAR=28
    HELP=29
    CANCEL=30
    STOP=31
    ALARM=32
    SNOOZE=33
    FOR=34
    QUALITY=35
    RATE=36
    ANALYZE=37
    GIVE=38
    GET=39
    ADVICE=40
    TIPS=41
    SUGGESTIONS=42
    BETTER=43
    IMPROVE=44
    CAN=45
    TIME=46
    NUMBER=47
    TIMEUNIT=48
    WS=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sleepCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.SleepCmdContext,0)


        def wakeCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.WakeCmdContext,0)


        def setAlarmCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.SetAlarmCmdContext,0)


        def setAlarmRelativeCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.SetAlarmRelativeCmdContext,0)


        def cancelAlarmCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.CancelAlarmCmdContext,0)


        def snoozeAlarmCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.SnoozeAlarmCmdContext,0)


        def lateAlertCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.LateAlertCmdContext,0)


        def queryCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.QueryCmdContext,0)


        def consistencyCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.ConsistencyCmdContext,0)


        def qualityCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.QualityCmdContext,0)


        def adviceCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.AdviceCmdContext,0)


        def helpCmd(self):
            return self.getTypedRuleContext(SleepCommandsParser.HelpCmdContext,0)


        def getRuleIndex(self):
            return SleepCommandsParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = SleepCommandsParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        try:
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.sleepCmd()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.wakeCmd()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 28
                self.setAlarmCmd()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 29
                self.setAlarmRelativeCmd()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 30
                self.cancelAlarmCmd()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 31
                self.snoozeAlarmCmd()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 32
                self.lateAlertCmd()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 33
                self.queryCmd()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 34
                self.consistencyCmd()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 35
                self.qualityCmd()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 36
                self.adviceCmd()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 37
                self.helpCmd()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SleepCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GOING(self):
            return self.getToken(SleepCommandsParser.GOING, 0)

        def TO(self):
            return self.getToken(SleepCommandsParser.TO, 0)

        def SLEEP(self):
            return self.getToken(SleepCommandsParser.SLEEP, 0)

        def I(self):
            return self.getToken(SleepCommandsParser.I, 0)

        def AM(self):
            return self.getToken(SleepCommandsParser.AM, 0)

        def getRuleIndex(self):
            return SleepCommandsParser.RULE_sleepCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSleepCmd" ):
                listener.enterSleepCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSleepCmd" ):
                listener.exitSleepCmd(self)




    def sleepCmd(self):

        localctx = SleepCommandsParser.SleepCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sleepCmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SleepCommandsParser.I:
                self.state = 40
                self.match(SleepCommandsParser.I)


            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SleepCommandsParser.AM:
                self.state = 43
                self.match(SleepCommandsParser.AM)


            self.state = 46
            self.match(SleepCommandsParser.GOING)
            self.state = 47
            self.match(SleepCommandsParser.TO)
            self.state = 48
            self.match(SleepCommandsParser.SLEEP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WakeCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WOKE(self):
            return self.getToken(SleepCommandsParser.WOKE, 0)

        def UP(self):
            return self.getToken(SleepCommandsParser.UP, 0)

        def AM(self):
            return self.getToken(SleepCommandsParser.AM, 0)

        def AWAKE(self):
            return self.getToken(SleepCommandsParser.AWAKE, 0)

        def I(self):
            return self.getToken(SleepCommandsParser.I, 0)

        def getRuleIndex(self):
            return SleepCommandsParser.RULE_wakeCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWakeCmd" ):
                listener.enterWakeCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWakeCmd" ):
                listener.exitWakeCmd(self)




    def wakeCmd(self):

        localctx = SleepCommandsParser.WakeCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_wakeCmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SleepCommandsParser.I:
                self.state = 50
                self.match(SleepCommandsParser.I)


            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SleepCommandsParser.WOKE]:
                self.state = 53
                self.match(SleepCommandsParser.WOKE)
                self.state = 54
                self.match(SleepCommandsParser.UP)
                pass
            elif token in [SleepCommandsParser.AM]:
                self.state = 55
                self.match(SleepCommandsParser.AM)
                self.state = 56
                self.match(SleepCommandsParser.AWAKE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetAlarmCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WAKE(self):
            return self.getToken(SleepCommandsParser.WAKE, 0)

        def ME(self):
            return self.getToken(SleepCommandsParser.ME, 0)

        def UP(self):
            return self.getToken(SleepCommandsParser.UP, 0)

        def AT(self):
            return self.getToken(SleepCommandsParser.AT, 0)

        def TIME(self):
            return self.getToken(SleepCommandsParser.TIME, 0)

        def getRuleIndex(self):
            return SleepCommandsParser.RULE_setAlarmCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetAlarmCmd" ):
                listener.enterSetAlarmCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetAlarmCmd" ):
                listener.exitSetAlarmCmd(self)




    def setAlarmCmd(self):

        localctx = SleepCommandsParser.SetAlarmCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_setAlarmCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(SleepCommandsParser.WAKE)
            self.state = 60
            self.match(SleepCommandsParser.ME)
            self.state = 61
            self.match(SleepCommandsParser.UP)
            self.state = 62
            self.match(SleepCommandsParser.AT)
            self.state = 63
            self.match(SleepCommandsParser.TIME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SetAlarmRelativeCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WAKE(self):
            return self.getToken(SleepCommandsParser.WAKE, 0)

        def ME(self):
            return self.getToken(SleepCommandsParser.ME, 0)

        def UP(self):
            return self.getToken(SleepCommandsParser.UP, 0)

        def IN(self):
            return self.getToken(SleepCommandsParser.IN, 0)

        def NUMBER(self):
            return self.getToken(SleepCommandsParser.NUMBER, 0)

        def TIMEUNIT(self):
            return self.getToken(SleepCommandsParser.TIMEUNIT, 0)

        def getRuleIndex(self):
            return SleepCommandsParser.RULE_setAlarmRelativeCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetAlarmRelativeCmd" ):
                listener.enterSetAlarmRelativeCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetAlarmRelativeCmd" ):
                listener.exitSetAlarmRelativeCmd(self)




    def setAlarmRelativeCmd(self):

        localctx = SleepCommandsParser.SetAlarmRelativeCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_setAlarmRelativeCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(SleepCommandsParser.WAKE)
            self.state = 66
            self.match(SleepCommandsParser.ME)
            self.state = 67
            self.match(SleepCommandsParser.UP)
            self.state = 68
            self.match(SleepCommandsParser.IN)
            self.state = 69
            self.match(SleepCommandsParser.NUMBER)
            self.state = 70
            self.match(SleepCommandsParser.TIMEUNIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CancelAlarmCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ALARM(self):
            return self.getToken(SleepCommandsParser.ALARM, 0)

        def CANCEL(self):
            return self.getToken(SleepCommandsParser.CANCEL, 0)

        def STOP(self):
            return self.getToken(SleepCommandsParser.STOP, 0)

        def MY(self):
            return self.getToken(SleepCommandsParser.MY, 0)

        def getRuleIndex(self):
            return SleepCommandsParser.RULE_cancelAlarmCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCancelAlarmCmd" ):
                listener.enterCancelAlarmCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCancelAlarmCmd" ):
                listener.exitCancelAlarmCmd(self)




    def cancelAlarmCmd(self):

        localctx = SleepCommandsParser.CancelAlarmCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cancelAlarmCmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            _la = self._input.LA(1)
            if not(_la==SleepCommandsParser.CANCEL or _la==SleepCommandsParser.STOP):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SleepCommandsParser.MY:
                self.state = 73
                self.match(SleepCommandsParser.MY)


            self.state = 76
            self.match(SleepCommandsParser.ALARM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SnoozeAlarmCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SNOOZE(self):
            return self.getToken(SleepCommandsParser.SNOOZE, 0)

        def NUMBER(self):
            return self.getToken(SleepCommandsParser.NUMBER, 0)

        def TIMEUNIT(self):
            return self.getToken(SleepCommandsParser.TIMEUNIT, 0)

        def FOR(self):
            return self.getToken(SleepCommandsParser.FOR, 0)

        def getRuleIndex(self):
            return SleepCommandsParser.RULE_snoozeAlarmCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSnoozeAlarmCmd" ):
                listener.enterSnoozeAlarmCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSnoozeAlarmCmd" ):
                listener.exitSnoozeAlarmCmd(self)




    def snoozeAlarmCmd(self):

        localctx = SleepCommandsParser.SnoozeAlarmCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_snoozeAlarmCmd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(SleepCommandsParser.SNOOZE)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SleepCommandsParser.FOR:
                self.state = 79
                self.match(SleepCommandsParser.FOR)


            self.state = 82
            self.match(SleepCommandsParser.NUMBER)
            self.state = 83
            self.match(SleepCommandsParser.TIMEUNIT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LateAlertCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WARN(self):
            return self.getToken(SleepCommandsParser.WARN, 0)

        def ME(self):
            return self.getToken(SleepCommandsParser.ME, 0)

        def IF(self):
            return self.getToken(SleepCommandsParser.IF, 0)

        def I(self):
            return self.getToken(SleepCommandsParser.I, 0)

        def AM(self):
            return self.getToken(SleepCommandsParser.AM, 0)

        def AWAKE(self):
            return self.getToken(SleepCommandsParser.AWAKE, 0)

        def AFTER(self):
            return self.getToken(SleepCommandsParser.AFTER, 0)

        def TIME(self):
            return self.getToken(SleepCommandsParser.TIME, 0)

        def getRuleIndex(self):
            return SleepCommandsParser.RULE_lateAlertCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLateAlertCmd" ):
                listener.enterLateAlertCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLateAlertCmd" ):
                listener.exitLateAlertCmd(self)




    def lateAlertCmd(self):

        localctx = SleepCommandsParser.LateAlertCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_lateAlertCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(SleepCommandsParser.WARN)
            self.state = 86
            self.match(SleepCommandsParser.ME)
            self.state = 87
            self.match(SleepCommandsParser.IF)
            self.state = 88
            self.match(SleepCommandsParser.I)
            self.state = 89
            self.match(SleepCommandsParser.AM)
            self.state = 90
            self.match(SleepCommandsParser.AWAKE)
            self.state = 91
            self.match(SleepCommandsParser.AFTER)
            self.state = 92
            self.match(SleepCommandsParser.TIME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHAT(self):
            return self.getToken(SleepCommandsParser.WHAT, 0)

        def TIMEWORD(self):
            return self.getToken(SleepCommandsParser.TIMEWORD, 0)

        def DID(self):
            return self.getToken(SleepCommandsParser.DID, 0)

        def I(self):
            return self.getToken(SleepCommandsParser.I, 0)

        def SLEEP(self):
            return self.getToken(SleepCommandsParser.SLEEP, 0)

        def YESTERDAY(self):
            return self.getToken(SleepCommandsParser.YESTERDAY, 0)

        def getRuleIndex(self):
            return SleepCommandsParser.RULE_queryCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryCmd" ):
                listener.enterQueryCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryCmd" ):
                listener.exitQueryCmd(self)




    def queryCmd(self):

        localctx = SleepCommandsParser.QueryCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_queryCmd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(SleepCommandsParser.WHAT)
            self.state = 95
            self.match(SleepCommandsParser.TIMEWORD)
            self.state = 96
            self.match(SleepCommandsParser.DID)
            self.state = 97
            self.match(SleepCommandsParser.I)
            self.state = 98
            self.match(SleepCommandsParser.SLEEP)
            self.state = 99
            self.match(SleepCommandsParser.YESTERDAY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConsistencyCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MY(self):
            return self.getToken(SleepCommandsParser.MY, 0)

        def SLEEP(self):
            return self.getToken(SleepCommandsParser.SLEEP, 0)

        def SHOW(self):
            return self.getToken(SleepCommandsParser.SHOW, 0)

        def CHECK(self):
            return self.getToken(SleepCommandsParser.CHECK, 0)

        def CONSISTENCY(self):
            return self.getToken(SleepCommandsParser.CONSISTENCY, 0)

        def REGULARITY(self):
            return self.getToken(SleepCommandsParser.REGULARITY, 0)

        def HOW(self):
            return self.getToken(SleepCommandsParser.HOW, 0)

        def IS(self):
            return self.getToken(SleepCommandsParser.IS, 0)

        def CONSISTENT(self):
            return self.getToken(SleepCommandsParser.CONSISTENT, 0)

        def REGULAR(self):
            return self.getToken(SleepCommandsParser.REGULAR, 0)

        def getRuleIndex(self):
            return SleepCommandsParser.RULE_consistencyCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConsistencyCmd" ):
                listener.enterConsistencyCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConsistencyCmd" ):
                listener.exitConsistencyCmd(self)




    def consistencyCmd(self):

        localctx = SleepCommandsParser.ConsistencyCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_consistencyCmd)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SleepCommandsParser.SHOW, SleepCommandsParser.CHECK]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                _la = self._input.LA(1)
                if not(_la==SleepCommandsParser.SHOW or _la==SleepCommandsParser.CHECK):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 102
                self.match(SleepCommandsParser.MY)
                self.state = 103
                self.match(SleepCommandsParser.SLEEP)
                self.state = 104
                _la = self._input.LA(1)
                if not(_la==SleepCommandsParser.CONSISTENCY or _la==SleepCommandsParser.REGULARITY):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [SleepCommandsParser.HOW]:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(SleepCommandsParser.HOW)
                self.state = 106
                _la = self._input.LA(1)
                if not(_la==SleepCommandsParser.CONSISTENT or _la==SleepCommandsParser.REGULAR):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 107
                self.match(SleepCommandsParser.IS)
                self.state = 108
                self.match(SleepCommandsParser.MY)
                self.state = 109
                self.match(SleepCommandsParser.SLEEP)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualityCmdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MY(self):
            return self.getToken(SleepCommandsParser.MY, 0)

        def SLEEP(self):
            return self.getToken(SleepCommandsParser.SLEEP, 0)

        def QUALITY(self):
            return self.getToken(SleepCommandsParser.QUALITY, 0)

        def SHOW(self):
            return self.getToken(SleepCommandsParser.SHOW, 0)

        def CHECK(self):
            return self.getToken(SleepCommandsParser.CHECK, 0)

        def HOW(self):
            return self.getToken(SleepCommandsParser.HOW, 0)

        def IS(self):
            return self.getToken(SleepCommandsParser.IS, 0)

        def RATE(self):
            return self.getToken(SleepCommandsParser.RATE, 0)

        def ANALYZE(self):
            return self.getToken(SleepCommandsParser.ANALYZE, 0)

        def getRuleIndex(self):
            return SleepCommandsParser.RULE_qualityCmd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualityCmd" ):
                listener.enterQualityCmd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualityCmd" ):
                listener.exitQualityCmd(self)




    def qualityCmd(self):

        localctx = SleepCommandsParser.QualityCmdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_qualityCmd)
        self._la = 0 # Token type
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SleepCommandsParser.SHOW, SleepCommandsParser.CHECK]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                _la = self._input.LA(1)
                if not(_la==SleepCommandsParser.SHOW or _la==SleepCommandsParser.CHECK):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 113
                self.match(SleepCommandsParser.MY)
                self.state = 114
                self.match(SleepCommandsParser.SLEEP)
                self.state = 115
                self.match(SleepCommandsParser.QUALITY)
                pass
            elif token in [SleepCommandsParser.HOW]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(SleepCommandsParser.HOW)
                self.state = 117
                self.match(SleepCommandsParser.IS)
                self.state = 118
                self.match(SleepCommandsParser.MY)
                self.state = 119
                self.match(SleepCommandsParser.SLEEP)
                self.state = 120
                self.match(SleepCommandsParser.QUALITY)
                pass
            elif token in [SleepCommandsParser.RATE, SleepCommandsParser.ANALYZE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                _la = self._input.LA(1)
                if not(_la==SleepCommandsParser.RATE or _la==SleepCommandsParser.ANALYZE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 122
                self.match(SleepCommandsParser.MY)
                self.state = 123
                self.match(SleepCommandsParser.SLEEP)
                pass
            else:
                raise NoViableAltException(self)
